Tab Overlap Fixed

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -278,6 +278,7 @@ form + .BottomBanner {
 
 .teamRegContainerForm {
     padding: 30px 50px;
+    min-height: 512px;
 }
 
 .teamRegContainerForm li {
